crates/tests/src/snapshots/fe_compiler_tests__compile_errors__missing_return.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: function body is missing a return or revert statement
  ┌─ fixtures/compile_errors/missing_return.fe:4:13
  │
4 │     pub def bar() -> u256:
  │             ^^^      ---- expected function to return `u256`
  │             │         
  │             all paths of this function must `return` or `revert`


